[workspace]
members = [
  "programs/omniliquid-registry",
  "programs/omniliquid-clob",
  "programs/omniliquid-price-router",
  "programs/omniliquid-trading-storage",
  "programs/omniliquid-omni-token",
  "programs/omniliquid-olp-vault"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1