[package]
name = "omniliquid-clob"
version = "0.1.0"
description = "CLOB (Central Limit Order Book) program for Omniliquid"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "omniliquid_clob"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.1.22"
pyth-solana-receiver-sdk = "0.6.1"
omniliquid-registry = { path = "../omniliquid-registry", features = ["cpi"] }