[package]
name = "omniliquid-trading-storage"
version = "0.1.0"
description = "Trading storage program for Omniliquid"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "omniliquid_trading_storage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.1.22"
omniliquid-registry = { path = "../omniliquid-registry", features = ["cpi"] }